Fix scaling of text search field of the FilterBar while on mobile such that it isn't only a squashed sliver

--- a/src/FilterBar.css
+++ b/src/FilterBar.css
@@ -75,6 +75,11 @@
   width: 100%;
 }
 
+.filterbar-compact-inner .filter-group-search {
+  flex: 0 0 auto;
+  width: 140px;
+}
+
 .filter-sep {
   width: 1px;
   align-self: stretch;
